TEST_PROGRAMS/VALID/chia-wei_liu/average.min
# average program by average me

var x: float;

var y: int;

var z: int;

var avg: float;var n: int;

var a: int;

var sum: int;

sum = 1;

while a do
    sum = sum * n;
    a = a - 1;
done

print sum;


x = 0.333; # setting x

y = .25;

z = 0;

z = -9;
z = -(5-3);

avg = (x+y+z) / 3.0;

print avg;

#testing comment 2
#another one

if (z-5) then
    print "you are not supposed to see this!!!";
else
    if z then
        print "yes you are supposed to see this because ";
        print "z is " + z;
    endif
endif
