TEST_PROGRAMS/INVALID/Yash_Gupta/I5.min
# Another one of those sample programs that do not work!

var x23:int; var m12x:int; var m23:int;
# let x= 5 in x * x;
while m do {while k do{while z do print k; done}done}done

if k3 then if m3 then m3 = 5; else if m4 then print m5; else print m6;endif endif else x23 = 34 - 3.765/2.54+3.95-0.000000+ 0505.6 ; endif



